--- a/WheelOfFate.ClientApp/package.json
+++ b/WheelOfFate.ClientApp/package.json
@@ -23,7 +23,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/moment": "^2.13.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -31,6 +34,7 @@
     "@angular/cli": "1.6.5",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
