--- a/WheelOfFate.Data/WheelOfFate.Data.csproj
+++ b/WheelOfFate.Data/WheelOfFate.Data.csproj
@@ -8,4 +8,10 @@
     <ProjectReference Include="..\WheelOfFate.Domain\WheelOfFate.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.EntityFrameworkCore">
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.entityframeworkcore\2.0.3\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
