--- a/WheelOfFate.Tests/WheelOfFate.Tests.csproj
+++ b/WheelOfFate.Tests/WheelOfFate.Tests.csproj
@@ -7,19 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+    <PackageReference Include="Moq" Version="4.8.3" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WheelOfFate.Domain\WheelOfFate.Domain.csproj" />
     <ProjectReference Include="..\WheelOfFate.Services\WheelOfFate.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Domain\" />
-    <Folder Include="WebAPI\" />
+    <ProjectReference Include="..\WheelOfFate.WebAPI\WheelOfFate.WebAPI.csproj" />
   </ItemGroup>
 
 </Project>
